# Ovito

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CHANGELOG.txt  CMakeLists.txt  LICENSE.MIT.txt  LICENSE.txt  README.md  README.txt  cmake-variants.json
src/: CMakeLists.txt
src/core/: CMakeLists.txt  Core.h  ForwardDecl.h
src/core/app/: Application.cpp  Application.h  ApplicationService.cpp  ApplicationService.h  PluginManager.cpp  PluginManager.h  StandaloneApplication.cpp  StandaloneApplication.h
src/core/dataset/: DataSet.cpp  DataSet.h  DataSetContainer.cpp  DataSetContainer.h  UndoStack.cpp  UndoStack.h
src/core/oo/: CloneHelper.cpp  CloneHelper.h  NativePropertyFieldDescriptor.h  OORef.h  OvitoClass.cpp  OvitoClass.h  OvitoObject.cpp  OvitoObject.h  OvitoObjectExecutor.cpp  OvitoObjectExecutor.h  PropertyField.cpp  PropertyField.h  PropertyFieldDescriptor.cpp  PropertyFieldDescriptor.h  RefMaker.cpp  RefMaker.h  RefMakerClass.cpp  RefMakerClass.h  RefTarget.cpp  RefTarget.h  RefTargetListener.cpp  RefTargetListener.h  ReferenceEvent.h
src/core/rendering/: ArrowPrimitive.h  FrameBuffer.cpp  FrameBuffer.h  MarkerPrimitive.h  MeshPrimitive.h  ParticlePrimitive.h  RenderSettings.cpp  RenderSettings.h  SceneRenderer.cpp  SceneRenderer.h
src/core/utilities/: BoundedPriorityQueue.h  Color.h  DeferredMethodInvocation.h  Exception.cpp  Exception.h  MemoryPool.h  MixedKeyCache.h
src/core/viewport/: Viewport.cpp  Viewport.h  ViewportConfiguration.cpp  ViewportConfiguration.h  ViewportSettings.cpp  ViewportSettings.h
src/gui/: CMakeLists.txt  ForwardDecl.h  GUI.h
src/gui/actions/: ActionManager.cpp  ActionManager.h  AnimationActions.cpp  FileActions.cpp  ViewportActions.cpp  ViewportModeAction.cpp  ViewportModeAction.h
src/gui/app/: GuiApplication.cpp  GuiApplication.h  GuiApplicationService.cpp  GuiApplicationService.h
src/gui/dataset/: GuiDataSetContainer.cpp  GuiDataSetContainer.h
src/gui/dialogs/: AdjustCameraDialog.cpp  AnimationKeyEditorDialog.cpp  AnimationKeyEditorDialog.h  AnimationSettingsDialog.cpp  AnimationSettingsDialog.h  ApplicationSettingsDialog.cpp  ApplicationSettingsDialog.h  ClonePipelineDialog.cpp  ClonePipelineDialog.h  FileExporterSettingsDialog.cpp  FileExporterSettingsDialog.h  FontSelectionDialog.cpp  FontSelectionDialog.h  GeneralSettingsPage.cpp  GeneralSettingsPage.h  ImportFileDialog.cpp  ImportFileDialog.h  ImportRemoteFileDialog.cpp  ImportRemoteFileDialog.h  ModifierTemplatesPage.cpp  ModifierTemplatesPage.h  RemoteAuthenticationDialog.h  ViewportSettingsPage.cpp  ViewportSettingsPage.h
src/gui/mainwin/: MainWindow.cpp  MainWindow.h  TaskDisplayWidget.cpp  TaskDisplayWidget.h  ViewportsPanel.cpp  ViewportsPanel.h
src/gui/properties/: AffineTransformationParameterUI.cpp  AffineTransformationParameterUI.h  BooleanActionParameterUI.cpp  BooleanActionParameterUI.h  BooleanGroupBoxParameterUI.cpp  BooleanGroupBoxParameterUI.h  BooleanParameterUI.cpp  BooleanParameterUI.h  BooleanRadioButtonParameterUI.cpp  BooleanRadioButtonParameterUI.h  ColorParameterUI.cpp  ColorParameterUI.h  CustomParameterUI.cpp  CustomParameterUI.h  DefaultPropertiesEditor.cpp  DefaultPropertiesEditor.h  FilenameParameterUI.cpp  FilenameParameterUI.h  FloatParameterUI.cpp  FloatParameterUI.h  FontParameterUI.cpp  FontParameterUI.h  IntegerParameterUI.cpp  IntegerParameterUI.h  IntegerRadioButtonParameterUI.cpp  IntegerRadioButtonParameterUI.h  ModifierDelegateListParameterUI.cpp  ModifierDelegateListParameterUI.h  ModifierDelegateParameterUI.cpp  ModifierDelegateParameterUI.h  ModifierPropertiesEditor.cpp  ModifierPropertiesEditor.h  NumericalParameterUI.cpp  NumericalParameterUI.h  ParameterUI.cpp  ParameterUI.h  PropertiesEditor.cpp  PropertiesEditor.h  PropertiesPanel.cpp  PropertiesPanel.h  (+14 more)
src/gui/rendering/: RenderSettingsEditor.cpp  RenderSettingsEditor.h  ViewportSceneRenderer.cpp  ViewportSceneRenderer.h
src/gui/resources/: gui.qrc
src/gui/viewport/: ViewportMenu.cpp  ViewportMenu.h  ViewportWindow.cpp  ViewportWindow.h
src/main/: CMakeLists.txt
src/main/resources/: Info.plist
src/opengl_renderer/: CMakeLists.txt  OpenGLArrowPrimitive.cpp  OpenGLArrowPrimitive.h  OpenGLBuffer.h  OpenGLImagePrimitive.cpp  OpenGLMarkerPrimitive.cpp  OpenGLMeshPrimitive.cpp  OpenGLMeshPrimitive.h  OpenGLParticlePrimitive.cpp  OpenGLParticlePrimitive.h  OpenGLSceneRenderer.cpp  OpenGLSceneRenderer.h  StandardSceneRenderer.cpp  StandardSceneRenderer.h
src/opengl_renderer/gui/: StandardSceneRendererEditor.cpp  StandardSceneRendererEditor.h
src/opengl_renderer/resources/: resources.qrc
src/ovito/: CMakeLists.txt
src/ovito/core/: CMakeLists.txt  Core.cpp  Core.h  ForwardDecl.h
src/ovito/correlation/: CMakeLists.txt  SpatialCorrelationFunctionModifier.cpp  SpatialCorrelationFunctionModifier.h
src/ovito/crystalanalysis/: CMakeLists.txt  CrystalAnalysis.cpp  CrystalAnalysis.h
src/ovito/delaunay/: CMakeLists.txt  DelaunayTessellation.cpp  DelaunayTessellation.h  ManifoldConstructionHelper.h
src/ovito/galamost/: CMakeLists.txt  GALAMOSTImporter.cpp  GALAMOSTImporter.h
src/ovito/grid/: CMakeLists.txt  Grid.cpp  Grid.h
src/ovito/gui/: CMakeLists.txt  ForwardDecl.h  GUI.cpp  GUI.h
src/ovito/gui_wasm/: CMakeLists.txt  GUI.cpp  GUI.h
src/ovito/mesh/: CMakeLists.txt  Mesh.cpp  Mesh.h
src/ovito/netcdf/: AMBERNetCDFExporter.cpp  AMBERNetCDFExporter.h  AMBERNetCDFImporter.cpp  AMBERNetCDFImporter.h  CMakeLists.txt
src/ovito/opengl/: CMakeLists.txt  OpenGLArrowPrimitive.cpp  OpenGLArrowPrimitive.h  OpenGLBuffer.h  OpenGLHelpers.h  OpenGLImagePrimitive.cpp  OpenGLImagePrimitive.h  OpenGLLinePrimitive.cpp  OpenGLLinePrimitive.h  OpenGLMarkerPrimitive.cpp  OpenGLMarkerPrimitive.h  OpenGLMeshPrimitive.cpp  OpenGLMeshPrimitive.h  OpenGLParticlePrimitive.cpp  OpenGLParticlePrimitive.h  (+9 more)
src/ovito_exe/: CMakeLists.txt  Main.cpp
src/ovito_wasm/: CMakeLists.txt  Main.cpp  index.html  wasm_shell.html
src/ovitos/: CMakeLists.txt  MacOSWrapper.cpp  Main.cpp
src/ovitos_exe/: CMakeLists.txt  MacOSWrapper.cpp  Main.cpp
src/plugins/: CMakeLists.txt
(+3589 files in other folders)
